--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "core-js": "^3.6.5",
     "konva": "^8.2.3",
     "moment": "^2.29.1",
+    "number-to-words": "^1.2.4",
+    "register-service-worker": "^1.7.1",
+    "to-words": "^3.0.2",
     "v-img": "^0.2.0",
     "vue": "^2.6.11",
     "vue-html2canvas": "^0.0.4",
@@ -29,6 +32,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "^4.5.15",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
