--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "vue-html2canvas": "^0.0.4",
     "vue-infinite-loading": "^2.4.5",
     "vue-konva": "^2.1.7",
+    "vue-lazytube": "^1.0.2",
     "vue-pdf-embed": "^1.0.4",
     "vue-router": "^3.2.0",
     "vue-stripe-elements-plus": "^1.0.2",
+    "vuelidate": "^0.7.7",
     "vuetify": "^2.5.10",
     "vuex": "^3.4.0"
   },
