--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-pdf-embed": "^1.0.4",
     "vue-router": "^3.2.0",
     "vue-stripe-elements-plus": "^1.0.2",
+    "vue2-google-maps": "^0.10.7",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.5.10",
     "vuex": "^3.4.0"
