--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "konva": "^8.2.3",
     "moment": "^2.29.1",
     "number-to-words": "^1.2.4",
+    "pdfvuer": "^1.9.2",
     "register-service-worker": "^1.7.1",
     "to-words": "^3.0.2",
     "v-img": "^0.2.0",
