--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-konva": "^2.1.7",
     "vue-lazytube": "^1.0.2",
     "vue-observe-visibility": "^1.0.0",
+    "vue-pdf-canvas": "^1.0.0",
     "vue-router": "^3.2.0",
     "vue-stripe-elements-plus": "^1.0.2",
     "vue-tap-and-hold": "^1.0.7",
