--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.1",
     "v-img": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-browser-detect-plugin": "^0.1.18",
     "vue-clipboard2": "^0.3.3",
     "vue-ctk-date-time-picker": "^2.5.0",
     "vue-html2canvas": "^0.0.4",
